// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions Renders correctly and does not load transactions if the user has not signed in 1`] = `
<tmpage-stub
  data-title="Transactions"
  dataempty="true"
  hideheader="true"
  managed="true"
  signinrequired="true"
  subtitle=""
  title=""
>
  <dataemptytx-stub />
   
  <template>
    <div>
      <transactionlist-stub
        address="cosmos1"
        transactions=""
        validators="[object Object]"
      />
    </div>
     
    <br />
     
    <tmdatamsg-stub
      icon="calendar_today"
      iconcolor="var(--warning)"
    >
      <div>
        
        Looking for older transactions?
      
      </div>
       
      <div>
        <p>
          
          Lunie cannot display transactions from previous chains in your
          activity page.
        
        </p>
         
        <p>
          
          If you would like to view information from previous chain upgrades
          please visit our
          
          <a
            href="https://intercom.help/lunie/en/articles/3787014-how-to-get-blockchain-data-from-previous-chain-upgrades"
          >
            Help Center.
          </a>
        </p>
      </div>
    </tmdatamsg-stub>
  </template>
</tmpage-stub>
`;

exports[`PageTransactions Renders correctly and loads transactions 1`] = `
<tmpage-stub
  data-title="Transactions"
  hideheader="true"
  loaded="true"
  managed="true"
  signinrequired="true"
  subtitle=""
  title=""
  transactions="[object Object],[object Object],[object Object],[object Object]"
  validators="[object Object],[object Object],[object Object]"
>
  <dataemptytx-stub />
   
  <template>
    <div>
      <transactionlist-stub
        address="cosmos1"
        transactions="[object Object],[object Object],[object Object],[object Object]"
        validators="[object Object]"
      />
    </div>
     
    <br />
     
    <tmdatamsg-stub
      icon="calendar_today"
      iconcolor="var(--warning)"
    >
      <div>
        
        Looking for older transactions?
      
      </div>
       
      <div>
        <p>
          
          Lunie cannot display transactions from previous chains in your
          activity page.
        
        </p>
         
        <p>
          
          If you would like to view information from previous chain upgrades
          please visit our
          
          <a
            href="https://intercom.help/lunie/en/articles/3787014-how-to-get-blockchain-data-from-previous-chain-upgrades"
          >
            Help Center.
          </a>
        </p>
      </div>
    </tmdatamsg-stub>
  </template>
</tmpage-stub>
`;
